--- a/frontend/src/style.css
+++ b/frontend/src/style.css
@@ -1,4 +1,5 @@
 @import "tailwindcss";
+
 @plugin "daisyui";
 
 
@@ -38,11 +39,11 @@
 }
 
 
-h3{
+h3 {
     @apply text-lg  text-primary ;
 }
 
-h2{
+h2 {
     @apply text-lg font-semibold text-primary ;
 }
 
@@ -50,3 +51,8 @@ h4 {
     /*@apply text-primary text-success ;*/
     color: #165b33;
 }
+
+h1 {
+    @apply text-3xl font-bold mb-8 text-center
+}
+
